Fix body overflow in mobile #1

--- a/src/elements/code.styl
+++ b/src/elements/code.styl
@@ -78,3 +78,9 @@ blockquote
 
   & + p
     margin-top: 1em
+
+@media mq-mobile
+  pre
+  blockquote
+      margin-left: 0
+      margin-right: 0
