--- a/src/typography/typography.styl
+++ b/src/typography/typography.styl
@@ -18,7 +18,7 @@ body
   -moz-osx-font-smoothing: grayscale
 
 .text-indent p::before
-  content: '\3000\3000'
+  content: "\3000\3000"
   display: inline
 
 p
